crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__basic__select_discoverable_composite_column.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "result": {
          "only_occurring_here1": "1152921504606846976"
        }
      }
    ]
  }
]
