crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__basic__select_enum.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Pips": 13,
        "Suit": "hearts"
      },
      {
        "Pips": 13,
        "Suit": "clubs"
      },
      {
        "Pips": 13,
        "Suit": "diamonds"
      },
      {
        "Pips": 13,
        "Suit": "spades"
      }
    ]
  }
]
