crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__basic__select_int_and_string.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 35,
        "title": "Garage Inc. (Disc 1)"
      }
    ]
  }
]
