crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__basic__select_nested_column_complex.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "the_organization": {
          "name_of_the_org": "RC Model Airplane Enthusiasts",
          "committees_of_the_org": [
            {
              "name_of_the_committee": "Founders",
              "members_of_the_committee": [
                {
                  "member_first_name": "Orville",
                  "member_last_name": "Wright"
                },
                {
                  "member_first_name": "Wilbur",
                  "member_last_name": "Wright"
                }
              ],
              "members_of_the_committee_last_names_only": [
                {
                  "member_last_name": "Wright"
                },
                {
                  "member_last_name": "Wright"
                }
              ]
            },
            {
              "name_of_the_committee": "Parts supply management",
              "members_of_the_committee": [
                {
                  "member_first_name": "Orville",
                  "member_last_name": "Wright"
                },
                {
                  "member_first_name": "Wilbur",
                  "member_last_name": "Wright"
                },
                {
                  "member_first_name": "Guybrush",
                  "member_last_name": "Threepwood"
                }
              ],
              "members_of_the_committee_last_names_only": [
                {
                  "member_last_name": "Wright"
                },
                {
                  "member_last_name": "Wright"
                },
                {
                  "member_last_name": "Threepwood"
                }
              ]
            }
          ]
        }
      }
    ]
  }
]
