crates/tests/databases-tests/src/postgres/snapshots/databases_tests__postgres__query_tests__basic__select_nested_column_simple.snap
---
source: crates/tests/databases-tests/src/postgres/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "result": {
          "the_first_line_of_the_address": "Somstreet 159"
        }
      }
    ]
  }
]
